--- a/src/modules/acc/views/master.html
+++ b/src/modules/acc/views/master.html
@@ -1,6 +1,10 @@
 <div ng-controller="modules/acc/controllers/master">
     <div class="navbar navbar-inverse navbar-static-top">
-        acc
+        <div class="navbar-header">
+            <a href="" class="navbar-brand">
+                <i class="glyphicon glyphicon-home"></i>
+            </a>
+        </div>
     </div>
     <div ui-view></div>
 </div>
