--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -1,4 +1,5 @@
-<div>
+<div class="acc-container acc-bg" ng-controller="modules/acc/components/gis/index">
+    <!--左侧-->
     <div class="acc-bar left panel-body">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -72,18 +73,79 @@
                     <strong>入廊人员</strong>
                 </span>
             </div>
-            <div class="list-group"></div>
+            <div class="list-group acc-container body">
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+                <div class="list-group-item">
+                    aaa
+                </div>
+            </div>
         </div>
     </div>
 
+    <!--右侧-->
     <div class="acc-bar right panel-body">
-        <div class="panel panel-default">
+        <div class="panel panel-default acc-container top" style="margin-top: 0; bottom: 50%">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>故障信息</strong>
                 </span>
             </div>
-            <div class="panel-body"></div>
+            <div class="panel-body acc-container body">
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+                <p>sss sadsdsdsd</p>
+            </div>
+        </div>
+        <div class="panel panel-default acc-container bottom" style="top: 50%">
+            <div class="panel-heading">
+                <span class="panel-title">
+                    <strong>应急信息</strong>
+                </span>
+            </div>
+            <div class="panel-body acc-container body"></div>
         </div>
     </div>
+
+    <!--地图区域-->
+    <div class="panel panel-default acc-container acc-bar-center"></div>
 </div>
