--- a/src/modules/acc/views/master.html
+++ b/src/modules/acc/views/master.html
@@ -8,7 +8,14 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-left">
                         <li>
-                            <a href="">aaa</a>
+                            <a href="">gis视图</a>
+                        </li>
+                        <li>
+                            <a href="">点位视图</a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a href="">管理</a>
                         </li>
                     </ul>
                 </li>
