--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -6,6 +6,11 @@
   right: 0;
 }
 
+.acc-container.body {
+  top: 43px;
+  overflow: auto;
+}
+
 .acc-container.navbar-under {
   margin-top: 50px;
 }
@@ -13,7 +18,13 @@
 .acc-container.bottom {
   margin-left: 15px;
   margin-right: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+}
+
+.acc-container.top {
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .acc-bar {
@@ -21,8 +32,11 @@
   top: 0;
   bottom: 0;
   width: 320px;
-  background-color: #222;
   padding-top: 1px;
+}
+
+.acc-bg {
+  background-color: #222;
 }
 
 .acc-bar.left {
@@ -31,4 +45,8 @@
 
 .acc-bar.right {
   right: 0;
+}
+
+.acc-bar-center {
+  margin: 0 320px 20px;
 }
