--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -147,5 +147,10 @@
     </div>
 
     <!--地图区域-->
-    <div class="panel panel-default acc-container acc-bar-center"></div>
+    <div class="panel panel-default acc-container acc-bar-center">
+        <div class="panel-body">
+            <p>这里放地图</p>
+            <div>布局可自适应浏览器高度，先做没有样式的</div>
+        </div>
+    </div>
 </div>
