--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -10,13 +10,13 @@
             <div class="list-group">
                 <div class="list-group-item clearfix">
                     <h4 class="list-group-item-heading pull-left">
-                        <i class="fas fa-clock fa-fw fa-3x"></i>
+                        <i class="fas fa-clock fa-fw fa-2x"></i>
                     </h4>
                     <p class="list-group-item-text">...</p>
                 </div>
                 <div class="list-group-item clearfix">
                     <h4 class="list-group-item-heading pull-left">
-                        <i class="fas fa-cloud fa-fw fa-3x"></i>
+                        <i class="fas fa-cloud fa-fw fa-2x"></i>
                     </h4>
                     <p class="list-group-item-text">...</p>
                 </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <div class="panel panel-default acc-container bottom" style="top: 448px">
+        <div class="panel panel-default acc-container bottom" style="top: 412px">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>入廊人员</strong>
@@ -113,7 +113,7 @@
 
     <!--右侧-->
     <div class="acc-bar right panel-body">
-        <div class="panel panel-default acc-container top" style="margin-top: 0; bottom: 50%">
+        <div class="panel panel-default acc-container top" style="margin-top: 1px; bottom: 50%">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>故障信息</strong>
@@ -136,7 +136,7 @@
                 <p>sss sadsdsdsd</p>
             </div>
         </div>
-        <div class="panel panel-default acc-container bottom" style="top: 50%">
+        <div class="panel panel-default acc-container bottom" style="margin-top: 1px; top: 50%">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>应急信息</strong>
@@ -148,9 +148,6 @@
 
     <!--地图区域-->
     <div class="panel panel-default acc-container acc-bar-center">
-        <div class="panel-body">
-            <p>这里放地图</p>
-            <div>布局可自适应浏览器高度，先做没有样式的</div>
-        </div>
+        <div map-area class="acc-container"></div>
     </div>
 </div>
