--- a/src/modules/acc/views/master.html
+++ b/src/modules/acc/views/master.html
@@ -8,10 +8,10 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-left">
                         <li>
-                            <a href="">gis视图</a>
+                            <a href="#/master/gisindex">gis视图</a>
                         </li>
                         <li>
-                            <a href="">点位视图</a>
+                            <a href="#/master/homeindex">点位视图</a>
                         </li>
                         <li role="separator" class="divider"></li>
                         <li>
@@ -34,7 +34,6 @@
                     </a>
                 </li>
             </ul>
-
         </div>
         <div class="navbar-collapse collapse text-center">
             <h4 class="navbar-text" style="display: inline-block; float: none;">管廊智能平台</h4>
