--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -48,5 +48,11 @@
 }
 
 .acc-bar-center {
-  margin: 0 320px 20px;
+  margin: 1px 320px 20px;
+}
+
+.acc-map {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
