--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -67,13 +67,13 @@
             </div>
         </div>
 
-        <div class="panel panel-default acc-container bottom" style="top: 416px">
+        <div class="panel panel-default acc-container bottom" style="top: 411px">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>入廊人员</strong>
                 </span>
             </div>
-            <div class="list-group acc-container body">
+            <div nicescroll class="list-group acc-container body">
                 <div class="list-group-item">
                     aaa
                 </div>
@@ -119,7 +119,7 @@
                     <strong>故障信息</strong>
                 </span>
             </div>
-            <div class="panel-body acc-container body">
+            <div nicescroll class="panel-body acc-container body">
                 <p>sss sadsdsdsd</p>
                 <p>sss sadsdsdsd</p>
                 <p>sss sadsdsdsd</p>
@@ -136,13 +136,13 @@
                 <p>sss sadsdsdsd</p>
             </div>
         </div>
-        <div class="panel panel-default acc-container bottom" style="margin-top: 1px; top: 50%">
+        <div class="panel panel-default acc-container bottom" style="top: 50%">
             <div class="panel-heading">
                 <span class="panel-title">
                     <strong>应急信息</strong>
                 </span>
             </div>
-            <div class="panel-body acc-container body"></div>
+            <div nicescroll class="panel-body acc-container body"></div>
         </div>
     </div>
 
