--- a/src/less/imports/leaflet-patch.less
+++ b/src/less/imports/leaflet-patch.less
@@ -1,17 +1,10 @@
-.leaflet-touch {
-  .leaflet-bar {
-    .navbar,
-    .dropdown-menu {
-      a {
-        width: inherit;
-      }
-    }
-  }
-}
-
-.leaflet-bar {
+.leaflet-container {
   .navbar,
   .dropdown-menu {
+    a {
+      width: inherit;
+    }
+
     a,
     a:hover {
       width: inherit;
