--- a/src/modules/acc/views/gisTools.html
+++ b/src/modules/acc/views/gisTools.html
@@ -1,4 +1,4 @@
-<div class="form-inline" ng-controller="modules/acc/controllers/gisTools">
+<div ng-controller="modules/acc/controllers/gisTools">
     <div class="btn-group leaflet-bar dropdown">
         <button class="btn btn-primary" ng-click="vm.test()">
             <i class="glyphicon glyphicon-cog"></i>
