--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -1,3 +1,6 @@
+body {
+  font-family: Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB, WenQuanYi Micro Hei, Microsoft Yahei, sans-serif;
+}
 .acc-container {
   position: absolute;
   top: 0;
@@ -46,27 +49,40 @@
   width: 100%;
   height: 100%;
 }
-.leaflet-touch .leaflet-bar .navbar a,
-.leaflet-touch .leaflet-bar .dropdown-menu a {
+.acc-manage {
+  margin-top: 20px;
+}
+.acc-manage .sidebar {
+  width: 250px;
+  padding: 0 15px;
+}
+.acc-manage .content {
+  margin-left: 250px;
+}
+.acc-manage .content > .view {
+  margin-top: 56px;
+}
+.leaflet-container .navbar a,
+.leaflet-container .dropdown-menu a {
   width: inherit;
 }
-.leaflet-bar .navbar a,
-.leaflet-bar .dropdown-menu a,
-.leaflet-bar .navbar a:hover,
-.leaflet-bar .dropdown-menu a:hover {
+.leaflet-container .navbar a,
+.leaflet-container .dropdown-menu a,
+.leaflet-container .navbar a:hover,
+.leaflet-container .dropdown-menu a:hover {
   width: inherit;
   height: inherit;
   line-height: inherit;
   display: inherit;
   text-align: inherit;
 }
-.leaflet-bar .navbar a:first-child,
-.leaflet-bar .dropdown-menu a:first-child {
+.leaflet-container .navbar a:first-child,
+.leaflet-container .dropdown-menu a:first-child {
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
-.leaflet-bar .navbar a:last-child,
-.leaflet-bar .dropdown-menu a:last-child {
+.leaflet-container .navbar a:last-child,
+.leaflet-container .dropdown-menu a:last-child {
   border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
 }
