--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -148,6 +148,6 @@
 
     <!--地图区域-->
     <div class="panel panel-default acc-container acc-bar-center">
-        <div map-area class="acc-container"></div>
+        <div class="map-area acc-container"></div>
     </div>
 </div>
