--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -119,21 +119,55 @@
                     <strong>故障信息</strong>
                 </span>
             </div>
-            <div nicescroll class="panel-body acc-container body">
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
-                <p>sss sadsdsdsd</p>
+            <div nicescroll class="list-group acc-container body">
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
+                <div class="list-group-item">
+                    sss sadsdsdsd
+                </div>
             </div>
         </div>
         <div class="panel panel-default acc-container bottom" style="top: 50%">
