--- a/src/modules/acc/views/master.html
+++ b/src/modules/acc/views/master.html
@@ -39,10 +39,22 @@
         </div>
         <div class="container-fluid pull-right">
             <ul class="navbar-nav nav navbar-right">
-                <li>
-                    <a href="">
+                <li class="dropdown">
+                    <a href="" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-comment"></i>
                     </a>
+                    <ul class="dropdown-menu">
+                        <!-- <li>
+                            <a href="">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a>
+                        </li> -->
+                        <li class="text-center">
+                            <a>无消息</a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li class="text-center">
+                            <a href="">查看更多</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
