--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -58,6 +58,7 @@ body {
 }
 .acc-manage .content {
   margin-left: 250px;
+  margin-right: 15px;
 }
 .acc-manage .content > .view {
   margin-top: 56px;
