--- a/src/modules/manage/components/settings/page.html
+++ b/src/modules/manage/components/settings/page.html
@@ -1,3 +1,19 @@
-<div ng-controller="modules/manage/components/settings/page">
-    <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+<div class="row" ng-controller="modules/manage/components/settings/page">
+    <div class="col-md-12">
+        <fieldset>
+            <legend>设备类型</legend>
+            <div class="form-group">
+
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>区域</legend>
+            <div class="form-group">
+
+            </div>
+        </fieldset>
+    </div>
+    <div class="col-md-6">
+        <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+    </div>
 </div>
