--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -2,3 +2,15 @@ body {
   font-family: Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB,
     WenQuanYi Micro Hei, Microsoft Yahei, sans-serif;
 }
+
+.panel-heading {
+  input,
+  input:active,
+  input:focus,
+  input:hover {
+    height: 20px;
+    border: none;
+    border-color: transparent;
+    background-color: transparent;
+  }
+}
