--- a/src/modules/acc/views/gisTools.html
+++ b/src/modules/acc/views/gisTools.html
@@ -28,8 +28,8 @@
         <button class="btn btn-warning" ng-click="vm.test()">
             <i class="glyphicon glyphicon-volume-up"></i>
         </button>
-        <button class="btn btn-default" ng-click="vm.test()">
-            <i class="glyphicon glyphicon-cog"></i>
+        <button class="btn btn-default" ng-click="vm.eqFilter()">
+            <i class="glyphicon glyphicon-filter"></i>
         </button>
     </div>
 </div>
