--- a/src/modules/manage/templates/treenode.html
+++ b/src/modules/manage/templates/treenode.html
@@ -1,18 +1,8 @@
 <div class="panel panel-default">
-    <div class="panel-heading">
-        <!-- <span ng-if="item[item.container]!==undefined && item[item.container].length > 0" class="glyphicon" ng-click="pg.nodeToggle(this)"
-            ng-class="{ 'far fa-plus-square': collapsed, 'far fa-minus-square': !collapsed }"></span>
-        <span ui-tree-handle ng-bind="item.title||item.type"></span>
-        <span class="pull-right">
-            <button class="btn btn-default btn-xs" ng-click="pg.editControl(this)">
-                <i class="glyphicon glyphicon-edit"></i>
-            </button>
-            <button class="btn btn-danger btn-xs" ng-click="pg.dropControl(this)">
-                <i class="glyphicon glyphicon-remove"></i>
-            </button>
-        </span> -->
+    <div class="panel-heading" ui-tree-handle>
+        {{item.name}}
     </div>
 </div>
-<ol ui-tree-nodes class="panel-group" ng-model="item.children" ng-class="{hidden: collapsed}" ng-if="item.children && item.children.length>0">
+<ol ui-tree-nodes class="panel-group" ng-model="item.children" ng-class="{hidden: collapsed}">
     <li ng-repeat="item in item.children" ui-tree-node ng-include="'modules/manage/templates/treenode.html'"></li>
 </ol>
