--- a/src/modules/manage/components/vars/list.html
+++ b/src/modules/manage/components/vars/list.html
@@ -1,3 +1,16 @@
 <div ng-controller="modules/manage/components/vars/list">
-    参数变量
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active">
+            <a href="#home" aria-controls="home" role="tab" data-toggle="tab">设备类型</a>
+        </li>
+        <li role="presentation">
+            <a href="">
+                <i class="glyphicon glyphicon-plus"></i>
+                添加分组
+            </a>
+        </li>
+    </ul>
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane container active" id="home"></div>
+    </div>
 </div>
