--- a/src/modules/manage/components/equipment/list.html
+++ b/src/modules/manage/components/equipment/list.html
@@ -8,5 +8,5 @@
             </button>
         </div>
     </form>
-    <div nicescroll jexcel="jexcel" class="table-responsive"></div>
+    <div nicescroll jexcel="jexcel" class="table-responsive manage-table"></div>
 </div>
