--- a/src/modules/acc/components/gis/equipmentFilter.html
+++ b/src/modules/acc/components/gis/equipmentFilter.html
@@ -67,7 +67,13 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="$close()">确定</button>
-        <button class="btn btn-default" ng-click="$dismiss()">取消</button>
+        <button class="btn btn-primary" ng-click="$close()">
+            <i class="glyphicon glyphicon-ok-sign"></i>
+            确定
+        </button>
+        <button class="btn btn-default" ng-click="$dismiss()">
+            <i class="glyphicon glyphicon-remove-sign"></i>
+            取消
+        </button>
     </div>
 </div>
