--- a/src/modules/manage/views/manage.html
+++ b/src/modules/manage/views/manage.html
@@ -1,5 +1,21 @@
 <div class="acc-container acc-manage" ng-controller="modules/manage/controllers/manage">
     <div class="sidebar">
+        <!-- <div id="acc_menu" role="tablist" aria-multiselectable="true" class="panel panel-default">
+            <div class="list-group" ng-repeat="m in menu">
+                <div id="acc_menu_heading_{{$index}}" role="tab">
+                    <a role="button" data-toggle="collapse" class="list-group-item active" data-parent="#acc_menu" href="#acc_menu_{{$index}}"
+                        aria-expanded="true" aria-controls="acc_menu_{{$index}}">
+                        <i class="{{m.icon}}"></i>
+                        <span>{{m.text}}</span>
+                    </a>
+                </div>
+                <div id="acc_menu_{{$index}}" class="panel-collapse collapse" ng-class="{'in': $index===0}" role="tabpanel" aria-labelledby="acc_menu_heading_{{$index}}">
+                    <a href="" class="list-group-item" ng-click="vm.action(sm)" ng-repeat="sm in m.menu">
+                        <span>{{sm.text}}</span>
+                    </a>
+                </div>
+            </div>
+        </div> -->
         <div class="panel-group" id="acc_menu" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default" ng-repeat="m in menu">
                 <div class="panel-heading" role="tab" id="acc_menu_heading_{{$index}}">
