--- a/src/modules/manage/templates/popupSelector.html
+++ b/src/modules/manage/templates/popupSelector.html
@@ -1,7 +1,9 @@
 <div>
     <div class="modal-header">
         <a href="" class="close" ng-click="$dismiss()">&times;</a>
-        <span class="modal-title">请选择</span>
+        <h4 class="modal-title">
+            <span>请选择</span>
+        </h4>
     </div>
     <div class="modal-body">
         <dl class="dl-horizontal" ng-repeat="cab in list">
