--- a/src/modules/common/templates/schemaConfirm.html
+++ b/src/modules/common/templates/schemaConfirm.html
@@ -1,5 +1,6 @@
 <div ng-init="$data.model=$data.model||{}">
     <div class="modal-header">
+        <a href="" class="close" ng-click="$dismiss()">&times;</a>
         <h4 class="modal-title">
             <i class="glyphicon glyphicon-edit"></i>&nbsp;{{$data.title}}
         </h4>
