--- a/src/modules/manage/components/equipment/list.html
+++ b/src/modules/manage/components/equipment/list.html
@@ -8,12 +8,18 @@
             </button>
         </div>
     </form>
-    <div nicescroll jexcel="jexcel" class="table-responsive manage-table"></div>
+    <!-- <div nicescroll jexcel="jexcel" class="table-responsive manage-table"></div> -->
 
-    <!-- <table ng-table="table" class="table table-striped table-hover">
+    <table ng-table="table" class="table table-striped table-hover">
         <tr ng-repeat="row in $data">
-
+            <td title="'编号'">{{row.code}}</td>
+            <td title="'设备名称'">{{row.name}}</td>
+            <td title="'类型'">{{row.categoryName}}</td>
+            <td title="'操作'">
+                <a href="" ng-click="vm.edit(row)">编辑</a>
+                <a href="" ng-click="vm.drop(row)">删除</a>
+            </td>
         </tr>
-    </table> -->
-    <div ng-pager="table" ng-init="table.reload()"></div>
+    </table>
+    <!-- <div ng-pager="table" ng-init="table.reload()"></div> -->
 </div>
