--- a/src/less/acc.less
+++ b/src/less/acc.less
@@ -1,4 +1,5 @@
 @import 'imports/common.less';
 @import 'imports/acc.less';
 @import 'imports/manage.less';
+@import 'imports/gissettings.less';
 @import 'imports/leaflet-patch.less';
