--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -10,6 +10,147 @@ body {
   border-color: transparent;
   background-color: transparent;
 }
+/* bs */
+.bg-blank {
+  background-color: #fff;
+}
+.bg-muted {
+  background-color: #eee;
+}
+.bg-skyblue {
+  color: #fff;
+  background-color: #62c6ad;
+}
+.navbar-xs {
+  min-height: 40px;
+}
+.navbar-skyblue {
+  color: #fff;
+  background-color: #62c6ad;
+}
+.navbar-skyblue .navbar-nav > li > a {
+  color: #fff;
+}
+.navbar-skyblue .nav > li > a:focus,
+.navbar-skyblue .nav > li > a:hover {
+  text-decoration: none;
+  background-color: #60a594;
+}
+.navbar-skyblue .nav .open > a,
+.navbar-skyblue .nav .open > a:focus,
+.navbar-skyblue .nav .open > a:hover {
+  background-color: #60a594;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu > a:after {
+  display: block;
+  content: ' ';
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px 6px;
+  border-radius: 0 6px 6px;
+}
+.form-control-enabled,
+.form-control-enabled[disabled],
+.form-control-enabled[readonly] {
+  background-color: #fff;
+}
+/* nav-swiper */
+.nav.nav-swiper > li > a:hover,
+.nav.nav-swiper > li > a:focus {
+  background-color: transparent;
+}
+.nav-swiper {
+  margin-top: 1px;
+  border-bottom: 1px solid #ddd;
+}
+.nav-swiper.nav-justified {
+  width: 100%;
+  border-bottom: none;
+  margin-top: 0;
+}
+.nav-swiper.nav-justified > li {
+  float: none;
+}
+.nav-swiper.shadow {
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075);
+}
+.nav-swiper > li {
+  float: left;
+  margin-bottom: -1px;
+}
+.nav-swiper > li.active:after {
+  float: left;
+  width: 100%;
+  height: 4px;
+  background-color: #eee;
+}
+.nav-swiper li:after {
+  position: absolute;
+  top: auto;
+  right: auto;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  height: 1px;
+  content: '';
+  background-color: transparent;
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transform: scaleY(0.5);
+}
+@media (min-width: 768px) {
+  .navbar-xs .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .nav-swiper.nav-justified > li {
+    display: table-cell;
+    width: 1%;
+  }
+  .nav-swiper.nav-justified > li > a {
+    margin-bottom: 0;
+  }
+  .nav-swiper.nav-justified > li > a {
+    border-bottom: 1px solid #ddd;
+  }
+}
+.nav-swiper.nav-swiper-default > li.active:after {
+  background-color: #777;
+}
+.nav-swiper.nav-swiper-primary > li.active:after {
+  background-color: #428bca;
+}
+.nav-swiper.nav-swiper-warning > li.active:after {
+  background-color: #f0ad4e;
+}
+.nav-swiper.nav-swiper-danger > li.active:after {
+  background-color: #d9534f;
+}
+.nav-swiper.nav-swiper-info > li.active:after {
+  background-color: #5bc0de;
+}
+.nav-swiper.nav-swiper-success > li.active:after {
+  background-color: #5cb85c;
+}
 .acc-container {
   position: absolute;
   top: 0;
@@ -85,6 +226,24 @@ body {
 }
 .manage-table table {
   width: 100%;
+}
+.pb-container {
+  margin: 0 15px 15px;
+}
+.pb-container .tools {
+  width: 320px;
+  overflow: auto;
+}
+.pb-container .area {
+  margin-left: 320px;
+  margin-right: 320px;
+  border-left: solid 1px #ddd;
+  border-right: solid 1px #ddd;
+  overflow: auto;
+}
+.pb-container .property {
+  width: 320px;
+  left: auto;
 }
 .leaflet-container .navbar a,
 .leaflet-container .dropdown-menu a {
