--- a/src/modules/acc/views/gisTools.html
+++ b/src/modules/acc/views/gisTools.html
@@ -1,10 +1,7 @@
 <div ng-controller="modules/acc/controllers/gisTools">
     <div class="btn-group leaflet-bar dropdown">
-        <button class="btn btn-primary" ng-click="vm.test()">
+        <button class="btn btn-primary" ng-click="vm.goSettings()">
             <i class="glyphicon glyphicon-cog"></i>
-        </button>
-        <button class="btn btn-default" ng-click="vm.test()">
-            <i class="glyphicon glyphicon-search"></i>
         </button>
         <ul class="dropdown-menu dropdown-menu-right">
             <li>
@@ -17,15 +14,15 @@
                 <a href="">显示1</a>
             </li>
         </ul>
-        <button class="btn btn-success" data-toggle="dropdown">
+        <button class="btn btn-default" data-toggle="dropdown">
             <i class="glyphicon glyphicon-road"></i>
         </button>
     </div>
     <div class="btn-group leaflet-bar">
         <button class="btn btn-default" ng-click="vm.test()">
-            <i class="glyphicon glyphicon-refresh"></i>
+            <i class="glyphicon glyphicon-search"></i>
         </button>
-        <button class="btn btn-warning" ng-click="vm.test()">
+        <button class="btn btn-default">
             <i class="glyphicon glyphicon-volume-up"></i>
         </button>
         <button class="btn btn-default" ng-click="vm.eqFilter()">
