--- a/src/modules/acc/components/gisSettings/settings.html
+++ b/src/modules/acc/components/gisSettings/settings.html
@@ -11,16 +11,31 @@
                 </ul>
                 <div class="tab-content acc-container" style="margin-top: 40px">
                     <div nicescroll role="tabpanel" class="tab-pane acc-container active" style="overflow: auto" id="cus_info">
-                        <!-- <table class="table table-striped table-hover"></table> -->
-                        <div class="list-group">
-                            <div class="list-group-item">
-                                <a href="">区域1</a>
-                                <a href="" class="pull-right text-danger">删除</a>
+                        <div class="panel-body">
+                            <div class="panel-group" ng-init="vm.loadAreas()">
+                                <div class="panel panel-default" ng-repeat="area in areas">
+                                    <div class="panel-body" ng-class="{'bg-info': current.code===area.code}">
+                                        <div class="form-group">
+                                            <a href="" ng-click="vm.changeLocation(area)">{{area.name}}</a>
+                                        </div>
+                                        <div>
+                                            <a href="" class="text-primary" ng-click="vm.renameArea(area)">
+                                                <i class="glyphicon glyphicon-edit"></i>
+                                                重命名
+                                            </a>
+                                            <a href="" class="text-primary" ng-click="vm.updateArea(area)">
+                                                <i class="glyphicon glyphicon-map-marker"></i>
+                                                更新坐标
+                                            </a>
+                                            <a href="" class="text-danger pull-right" ng-click="vm.deleteArea(area)">删除</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="panel btn btn-primary btn-group-justified" ng-click="vm.saveLocation()">
+                                    <i class="glyphicon glyphicon-plus"></i>
+                                    当前位置缩放创建区域
+                                </button>
                             </div>
-                            <a href="" class="list-group-item text-center" ng-click="vm.saveLocation()">
-                                <i class="glyphicon glyphicon-plus"></i>
-                                保存当前为区域
-                            </a>
                         </div>
                     </div>
                 </div>
