--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -200,3 +200,31 @@ body {
 .nav-swiper.nav-swiper-success > li.active:after {
   background-color: #5cb85c;
 }
+
+/* table */
+table.table-absolute {
+  // position: absolute;
+  // margin: 0;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+
+  // tbody {
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+
+  //   tr {
+  //     width: 100%;
+  //   }
+  // }
+
+  // &.input-header {
+  //   tbody {
+  //     top: 51px;
+  //   }
+  // }
+}
