--- a/src/modules/acc/components/gisSettings/settings.html
+++ b/src/modules/acc/components/gisSettings/settings.html
@@ -74,25 +74,25 @@
                 <ul class="nav nav-swiper nav-justified shadow nav-swiper-primary">
                     <li class="text-center active">
                         <a href="#cus_info" aria-controls="cus_info" role="tab" data-toggle="tab">
-                            属性
+                            设备
                         </a>
                     </li>
                     <li class="text-center">
                         <a href="#cus_info" aria-controls="cus_equ" role="tab" data-toggle="tab">
-                            设备
+                            属性
                         </a>
                     </li>
                 </ul>
                 <div class="tab-content acc-container" style="margin-top: 40px">
-                    <div nicescroll role="tabpanel" class="tab-pane acc-container active" id="cus_info">
-
+                    <div role="tabpanel" class="tab-pane acc-container active" id="cus_info">
+                        <table ng-table class="table table-absolute input-header">
+                            <tr ng-repeat="row in equipments">
+                                <td header="'modules/acc/components/gisSettings/equipmentSelector.html'">{{row.name}}</td>
+                            </tr>
+                        </table>
                     </div>
                     <div nicescroll role="tabpanel" class="tab-pane acc-container" id="cus_equ">
-                        <div ui-tree>
-                            <ol ui-tree-nodes class="panel-group" ng-model="categories">
-                                <li ng-repeat="item in categories" ui-tree-node ng-include="'modules/acc/templates/categoryNode.html'"></li>
-                            </ol>
-                        </div>
+
                     </div>
                 </div>
             </div>
