--- a/src/modules/acc/views/master.html
+++ b/src/modules/acc/views/master.html
@@ -27,6 +27,13 @@
                             </a>
                         </li>
                         <li role="separator" class="divider"></li>
+                        <li ng-controller="modules/acc/controllers/test">
+                            <a href="" ng-click="vm.formtest()">
+                                <i class="glyphicon glyphicon-cog"></i>
+                                测试
+                            </a>
+                        </li>
+                        <li role="separator" class="divider"></li>
                         <li>
                             <a href="" ng-click="vm.exit()">
                                 <i class="glyphicon glyphicon-off"></i>
