--- a/src/modules/acc/components/gisSettings/settings.html
+++ b/src/modules/acc/components/gisSettings/settings.html
@@ -4,13 +4,13 @@
             <div class="acc-container tools">
                 <ul class="nav nav-swiper nav-justified shadow nav-swiper-primary">
                     <li class="text-center active">
-                        <a href="#cus_info" aria-controls="cus_info" role="tab" data-toggle="tab">
+                        <a href="#cus_views" aria-controls="cus_views" role="tab" data-toggle="tab">
                             展示区域
                         </a>
                     </li>
                 </ul>
                 <div class="tab-content acc-container" style="margin-top: 40px">
-                    <div nicescroll role="tabpanel" class="tab-pane acc-container active" style="overflow: auto" id="cus_info">
+                    <div nicescroll role="tabpanel" class="tab-pane acc-container active" style="overflow: auto" id="cus_views">
                         <div class="panel-body">
                             <div class="panel-group" ng-init="vm.loadAreas()">
                                 <div class="panel panel-default" ng-repeat="area in areas">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="acc-container">
-                    <div class="map-area acc-container"></div>
+                    <div class="map-area acc-container" ng-drop="true" ng-drop-success="vm.addEquipment($data, $event)"></div>
                 </div>
             </div>
             <div class="acc-container property">
@@ -78,8 +78,8 @@
                         </a>
                     </li>
                     <li class="text-center">
-                        <a href="#cus_info" aria-controls="cus_equ" role="tab" data-toggle="tab">
-                            属性
+                        <a href="#cus_equ" aria-controls="cus_equ" role="tab" data-toggle="tab">
+                            图层
                         </a>
                     </li>
                 </ul>
@@ -87,7 +87,9 @@
                     <div role="tabpanel" class="tab-pane acc-container active" id="cus_info">
                         <table ng-table class="table table-absolute input-header">
                             <tr ng-repeat="row in equipments">
-                                <td header="'modules/acc/components/gisSettings/equipmentSelector.html'">{{row.name}}</td>
+                                <td header="'modules/acc/components/gisSettings/equipmentSelector.html'">
+                                    <a href="" ng-drag="true" ng-drag-data="row">{{row.name}}</a>
+                                </td>
                             </tr>
                         </table>
                     </div>
