--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -158,6 +158,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: -1;
 }
 .acc-container.body {
   top: 43px;
@@ -180,7 +181,7 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 320px;
+  width: 300px;
   padding-top: 1px;
 }
 .acc-bar.left {
@@ -193,7 +194,7 @@ body {
   background-color: #222;
 }
 .acc-bar-center {
-  margin: 1px 320px 20px;
+  margin: 1px 300px 20px;
 }
 .acc-map {
   position: relative;
@@ -232,18 +233,18 @@ body {
   margin: 0 15px 15px;
 }
 .pb-container .tools {
-  width: 320px;
+  width: 300px;
   overflow: auto;
 }
 .pb-container .area {
-  margin-left: 320px;
-  margin-right: 320px;
+  margin-left: 300px;
+  margin-right: 300px;
   border-left: solid 1px #ddd;
   border-right: solid 1px #ddd;
   overflow: auto;
 }
 .pb-container .property {
-  width: 320px;
+  width: 300px;
   left: auto;
 }
 .leaflet-container .navbar a,
