--- a/src/less/imports/acc.less
+++ b/src/less/imports/acc.less
@@ -4,6 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: -1;
 
   &.body {
     top: 43px;
@@ -31,7 +32,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 320px;
+  width: 300px;
   padding-top: 1px;
 
   &.left {
@@ -48,7 +49,7 @@
 }
 
 .acc-bar-center {
-  margin: 1px 320px 20px;
+  margin: 1px 300px 20px;
 }
 
 .acc-map {
