--- a/src/modules/acc/components/gisSettings/equipmentSelector.html
+++ b/src/modules/acc/components/gisSettings/equipmentSelector.html
@@ -1,8 +1,8 @@
 <div class="form-group has-feedback dropdown" style="margin: 0">
     <input class="form-control dropdown-toggle" data-toggle="dropdown" readonly="readonly" placeholder="选择设备类型" ng-model="categoryName">
-    <div class="dropdown-menu dropdown-menu-right" style="width: 600px">
+    <div class="dropdown-menu dropdown-menu-right" style="width: 100%">
         <div class="panel-body">
-            <dl class="dl-horizontal" ng-repeat="cab in categories">
+            <dl ng-repeat="cab in categories">
                 <dt>{{cab.$data.name}}</dt>
                 <dd>
                     <a href="" ng-click="vm.selectCategory(c)" ng-repeat="c in cab.$children">
